# wordcount

./: .travis.yml  Cargo.toml
src/: lib.rs  main.rs
tests/: char.rs  line.rs
